@@ -1,5 +1,6 @@
-/* config.h.  Generated by configure.  */
-/* config.h.in.  Generated from configure.in by autoheader.  */
+/* config.h.  Adoted from config which was generated by configure using MSYS and MINGW.  */
+/* Special consideration have been given to MS Visual Studio 2008 nrequirements.  */
+/* HVo Dec. 2008*/
 
 /* Support for Verilog-A(MS) models */
 /* #undef ADMS */
@@ -468,13 +469,13 @@
 #define PACKAGE_NAME "ng-spice-rework"
 
 /* Define to the full name and version of this package. */
-#define PACKAGE_STRING "ng-spice-rework 17.1"
+#define PACKAGE_STRING "ng-spice-rework 18"
 
 /* Define to the one symbol short name of this package. */
 #define PACKAGE_TARNAME "ng-spice-rework"
 
 /* Define to the version of this package. */
-#define PACKAGE_VERSION "17.1"
+#define PACKAGE_VERSION "18"
 
 /* Define if we want predictor algorithm */
 /* #undef PREDICTOR */
@@ -529,7 +530,7 @@
 /* #undef TM_IN_SYS_TIME */
 
 /* Version number of package */
-#define VERSION "17.1"
+#define VERSION "18"
 
 /* Define if we want spice2 sensitivity analysis */
 /* #undef WANT_SENSE2 */
