@@ -1,3 +1,7 @@
+2008-11-04 Holger Vogt
+ * /doc/version.texi committed again
+ * /visualc/include/config.h: version no. 18
+
 2008-11-22 Lionel Sainte Cluque
  * COPYING: license clarifications
  * frontend/inpcom.c: minor changes (correct warning)
